save to database

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,7 @@ FLASK_DEBUG=true
 # Server configuration
 HOST=0.0.0.0
 PORT=5000
+
+# Database and logs configuration
+CRONBAT_DB_PATH=instance/cronbat.db
+CRONBAT_LOGS_PATH=instance/logs
