--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,20 +2,21 @@ version: '3.8'
 
 services:
   backend:
-    image: ghcr.io/larsla/cronbat-backend:${CRONBAT_VERSION:-latest}
+    build: ./backend
     ports:
       - "5000:5000"
     environment:
-      - SECRET_KEY=production_secret_key_change_me
-      - FLASK_DEBUG=false
+      - SECRET_KEY=development_secret_key
+      - FLASK_DEBUG=true
       - HOST=0.0.0.0
       - PORT=5000
     restart: unless-stopped
     volumes:
       - backend_data:/app/instance
+      - ./backend:/app  # Mount source code for development
 
   frontend:
-    image: ghcr.io/larsla/cronbat-frontend:${CRONBAT_VERSION:-latest}
+    build: ./frontend
     ports:
       - "8000:80"
     depends_on:
@@ -24,6 +25,8 @@ services:
     environment:
       - REACT_APP_API_URL=http://localhost:5000/api
       - REACT_APP_SOCKET_URL=http://localhost:5000
+    volumes:
+      - ./frontend:/app  # Mount source code for development
 
 volumes:
   backend_data:
