clean up events

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,6 @@ PORT=5000
 # Database and logs configuration
 CRONBAT_DB_PATH=instance/cronbat.db
 CRONBAT_LOGS_PATH=instance/logs
+
+# Execution history configuration
+CRONBAT_MAX_EXECUTIONS=20
