add tools to backend image and run as non-root

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,17 @@
 FROM python:3.11-slim
 
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    git \
+    openssh-client \
+    jq \
+    curl \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create a non-root user
+RUN groupadd -r cronbat && useradd -r -g cronbat -m -s /bin/bash cronbat
+
 WORKDIR /app
 
 # Copy requirements first for better caching
@@ -8,6 +20,12 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application
 COPY . .
+
+# Set proper permissions
+RUN chown -R cronbat:cronbat /app
+
+# Switch to non-root user
+USER cronbat
 
 # Expose the port the app runs on
 EXPOSE 5000
