--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,15 +11,17 @@ services:
       - HOST=0.0.0.0
       - PORT=5000
       - CRONBAT_MAX_EXECUTIONS=20
+      - CRONBAT_DB_PATH=/data/cronbat.db
+      - CRONBAT_LOGS_PATH=/data/logs
     restart: unless-stopped
     volumes:
-      - backend_data:/app/instance
+      - backend_data:/data
       - ./backend:/app  # Mount source code for development
 
   frontend:
     build: ./frontend
     ports:
-      - "8000:80"
+      - "3000:8080"
     depends_on:
       - backend
     restart: unless-stopped
